# win64-emulator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
crates/emulator/: Cargo.toml
crates/emulator/src/: loader_error.rs  main.rs
crates/emulator/src/emulation/: hooks.rs  iat.rs  iat_hooks.rs  mod.rs  vfs.rs
crates/emulator/src/emulation/memory/: constants.rs  mod.rs  teb.rs  utils.rs
crates/emulator/src/pe/: constants.rs  exports.rs  loader.rs  mod.rs  module_registry.rs  relocations.rs  utils.rs
crates/emulator/src/winapi/: mod.rs
crates/emulator/src/winapi/comctl32/: InitCommonControls.rs  InitCommonControlsEx.rs  mod.rs
crates/emulator/src/winapi/gdi32/: CreateFontIndirectA.rs  mod.rs
crates/emulator/src/winapi/kernel32/: CompareStringW.rs  CreateMutexA.rs  CreateThread.rs  DebugBreak.rs  EnumResourceNamesA.rs  FindResourceA.rs  FindResourceExA.rs  FormatMessageW.rs  FreeLibrary.rs  FreeResource.rs  GetCPInfo.rs  GetCommandLineA.rs  GetComputerNameW.rs  GetModuleFileNameA.rs  GetModuleFileNameW.rs  GetModuleHandleA.rs  GetOEMCP.rs  GetProcAddress.rs  GetProcessHeap.rs  GetSystemDirectoryW.rs  GetSystemTimeAsFileTime.rs  GetTempPathW.rs  GetThreadLocale.rs  GetTickCount.rs  GetUserDefaultLCID.rs  GetVersionExA.rs  GetWindowsDirectoryA.rs  GetWindowsDirectoryW.rs  HeapAlloc.rs  HeapFree.rs  InitializeCriticalSection.rs  IsDebuggerPresent.rs  LeaveCriticalSection.rs  LoadLibraryA.rs  LocalAlloc.rs  QueryPerformanceCounter.rs  ReadProcessMemory.rs  ResetEvent.rs  ResumeThread.rs  SetLastError.rs  (+9 more)
crates/emulator/src/winapi/ntdll/: RtlAddFunctionTable.rs  RtlCaptureContext.rs  RtlDosPathNameToNtPathName_U.rs  RtlFreeUnicodeString.rs  RtlLookupFunctionEntry.rs  ZwClose.rs  ZwCreateFile.rs  ZwSetInformationFile.rs
crates/emulator/src/winapi/ole32/: OleInitialize.rs
crates/emulator/src/winapi/oleaut32/: SysFreeString.rs  SysReAllocStringLen.rs  mod.rs
crates/emulator/src/winapi/user32/: GetDC.rs  GetDesktopWindow.rs  LoadIconA.rs  RegisterClassW.rs  mod.rs
crates/emulator/src/winapi/uxtheme/: GetThemeAppProperties.rs  IsAppThemed.rs  mod.rs
crates/emulator/src/winapi/version/: mod.rs
crates/mock_dlls/advapi32/: Cargo.toml
crates/mock_dlls/comctl32/: Cargo.toml
crates/mock_dlls/gdi32/: Cargo.toml
crates/mock_dlls/kernel32/: Cargo.toml
crates/mock_dlls/ntdll/: Cargo.toml
crates/mock_dlls/ole32/: Cargo.toml
crates/mock_dlls/oleaut32/: Cargo.toml
crates/mock_dlls/shell32/: Cargo.toml
crates/mock_dlls/user32/: Cargo.toml
crates/mock_dlls/uxtheme/: Cargo.toml
crates/mock_dlls/version/: Cargo.toml
scripts/: Dockerfile  build.sh  enigma.sh  enigma_protected.sh  enigma_unprotected.sh  test_enigma.sh
src/: hooks.rs  imports.rs  lib.rs  loaded_pe.rs  loader_error.rs  main.rs  pe64_emulator.rs  structs.rs
src/emulation/: code_hooks.rs  cpu.rs  dump.rs  engine.rs  hooks.rs  iat.rs  iat_hooks.rs  memory.rs  memory_hooks.rs  mod.rs  register_state.rs  snapshot.rs  tracing.rs  unicorn_backend.rs  vfs.rs
src/emulation/memory/: constants.rs  heap_manager.rs  mod.rs  peb.rs  teb.rs  utils.rs
src/pe/: constants.rs  exports.rs  imports.rs  loader.rs  mod.rs  module_registry.rs  types.rs
src/winapi/: heap_manager.rs  locale.rs  mod.rs  module_registry.rs
src/winapi/advapi32/: GetUserNameA.rs  GetUserNameW.rs  mod.rs
src/winapi/comctl32/: InitCommonControls.rs  InitCommonControlsEx.rs
src/winapi/gdi32/: CreateFontIndirectA.rs  GetDeviceCaps.rs  mod.rs
src/winapi/kernel32/: AddVectoredExceptionHandler.rs  CheckRemoteDebuggerPresent.rs  (+115 more)
tests/: enigma_test.rs
(+70 files in other folders)
