[workspace]
members = [
    "crates/emulator",
    "crates/mock_dlls/common",
    "crates/mock_dlls/advapi32",
    "crates/mock_dlls/comctl32",
    "crates/mock_dlls/gdi32",
    "crates/mock_dlls/kernel32",
    "crates/mock_dlls/ntdll",
    "crates/mock_dlls/ole32",
    "crates/mock_dlls/oleaut32",
    "crates/mock_dlls/shell32",
    "crates/mock_dlls/user32",
    "crates/mock_dlls/uxtheme",
    "crates/mock_dlls/version",
]

resolver = "2"

[workspace.dependencies]
# emulation
unicorn-engine = "2.1.3"
# pe64
object = "0.37.3"
# disassembly
iced-x86 = "1.21.0"
# logging
log = "0.4"
fast_log = { version = "1.7" }
env_logger = "0.11.8"

[workspace.dependencies.windows-sys]
version = "0.60.2"
features = [
    "Wdk_Foundation",
    "Wdk_Storage_FileSystem",
    "Wdk_Storage",
    "Wdk",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_Storage",
    "Win32_System_IO",
    "Win32_System_Kernel",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI",
]
