[package]
name = "win64-emulator"
version = "0.1.0"
edition = "2024"

[dependencies]
# emulation
unicorn-engine = "2.1.3"
# pe64
object = "0.37.3"
# disassembly
iced-x86 = "1.21.0"
# logging
log = "0.4"
fast_log = { version = "1.7" }
env_logger = "0.11.8"

[dependencies.windows-sys]
version = "0.60.2"
features = [
    "Wdk_Foundation",
    "Wdk_Storage_FileSystem",
    "Wdk_Storage",
    "Wdk",
    "Win32_Globalization",
    "Win32_Graphics_Gdi",
    "Win32_Storage_FileSystem",
    "Win32_Storage",
    "Win32_System_IO",    
    "Win32_System_Kernel",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Variant",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI",
]

[features]
default = []
file-logger = []
console-logger = []
log-mem-read = []
log-mem-write = []
log-instruction = []
trace-instruction = []
